@@ -23,6 +23,7 @@ def STORE_SUBSCR(op):          return dis.opname[op] == 'STORE_SUBSCR'
 def CALL_FUNCTION(op):         return dis.opname[op] == 'CALL_FUNCTION'
 def IMPORT_NAME(op):           return dis.opname[op] == 'IMPORT_NAME'
 def IMPORT_FROM(op):           return dis.opname[op] == 'IMPORT_FROM'
+def IMPORT_STAR(op):           return dis.opname[op] == 'IMPORT_STAR'
 def BINARY_SUBSCR(op):         return dis.opname[op] == 'BINARY_SUBSCR'
 def BINARY_ADD(op):            return dis.opname[op] == 'BINARY_ADD'
 def BUILD_LIST(op):            return dis.opname[op] == 'BUILD_LIST'
