@@ -1,0 +1,14 @@
+Processing test34...
+
+Warnings...
+
+/usr/local/lib/python2.1/getopt.py:25 No doc string for class GetoptError
+
+test_input/test34.py:1 No doc string for class Error
+test_input/test34.py:6 Module member (string) re-imported with *
+test_input/test34.py:9 Using import and from ... import for (locale)
+test_input/test34.py:10 Using import and from ... import for (locale)
+test_input/test34.py:13 Using import and from ... import for (getopt)
+test_input/test34.py:16 Using import and from ... import for (copy)
+test_input/test34.py:19 Module member (from re import sub) re-imported
+test_input/test34.py:22 Module (ihooks) re-imported
